--- a/06Java基础阶段/02我的笔记/设计模式.md
+++ b/06Java基础阶段/02我的笔记/设计模式.md
@@ -848,30 +848,39 @@ public class Client {
 
 代理模式是Spring AOP底层（面试：Spring AOP 和Spring MVC）。
 
-### 1.5.1 静态代理
+### 1、静态代理
 
-#### 1.5.1.1 介绍
+被代理的对象可以是远程对象、创建开销大的对象或需要安全控制的对象。
 
-**角色分析**
+代理模式有不同的形式, 主要有三种：静态代理、动态代理 (JDK代理、接口代理)和 Cglib代理 (可以在内存动态的创建对象，而不需要实现接口，属于动态代理的范畴) 。
 
-+ 抽象角色：一般会使用接口或者抽象类来解决。
-+ 真实角色：被代理的角色。
-+ 代理角色：代理真实角色。之后，我们会做一些附属操作。
-+ 客户：访问代理对象的人。
+调用的时候通过调用代理对象的方法来调用目标对象，代理对象与目标对象要实现相同的接口,然后通过调用相同的方法来 调用目标对象的方法。
 
-**优点**
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923143844600.png" alt="image-20200923143844600" style="zoom:80%;" />
+
+1、介绍
+
+角色分析
+
+抽象角色：一般会使用接口或者抽象类来解决。
+
+真实角色：被代理的角色（目标对象）。
+
+代理角色：代理真实角色。之后，我们会做一些附属操作。
+
+客户：访问代理对象的人。
+
+2、优点
 
 可以直接使真实角色的操作更加纯粹，不用关注一些公共的业务，公共业务就交给了代理角色，进而实现了业务的分工。同时，公共业务发生扩展的时候，也方便集中管理。
 
-**缺点**
+3、缺点
 
 一个真实角色会产生一个代理角色，代码量会翻倍，开发效率会降低。
 
-#### 1.5.1.2 创建简单工程
+#### 创建简单工程
 
-**案例描述**
-
-客户租房过程。
+需求：客户租房过程。
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200521232332110.png" alt="image-20200603110733600" style="zoom:67%;" />
 
@@ -887,7 +896,7 @@ public interface Rent {
 2. **真实角色**
 
 ```java
-//房东
+//房东（目标对象）
 public class Host implements Rent {
     public void rent() {
         System.out.println("房东--->出租房子");
@@ -904,14 +913,15 @@ public class Proxy implements Rent{
 
     public Proxy() {
     }
+  	//将房东传进来
     public Proxy(Host host) {
         this.host = host;
     }
 
     public void rent() {
-        seeHouse();
-        host.rent();
-        Ht();
+        seeHouse(); 
+        host.rent(); //房东的真实动作
+        Ht(); //附加动作
         Fare();
     }
 
@@ -953,7 +963,7 @@ public class Client {
 }
 ```
 
-+ 控制台输出
+控制台输出：
 
 ```java
 中介 --> 带你看房
@@ -962,15 +972,17 @@ public class Client {
 中介 --> 收中介费
 ```
 
-+ 编码步骤
+编码步骤
 
 接口 -> 真实角色 -> 代理角色 -> 客户端访问代理角色。
 
-#### 1.5.1.3 创建实际工程
+优点：在不修改目标对象的功能前提下, 能通过代理对象对目标功能扩展。
 
-**业务描述**
+缺点：因为代理对象需要与目标对象实现一样的接口，所以会有很多代理类，一旦接口增加方法，目标对象与代理对象都要维护。
 
-在公司已写好的用户增删改查的代码基础上，添加输出日志功能。
+#### 创建实际工程
+
+需求：在公司已写好的用户增删改查的代码基础上，添加输出日志功能。
 
 1. **创建接口**
 
@@ -1071,25 +1083,30 @@ public class Client {
 }
 ```
 
-+ 控制端输出结果
+控制端输出结果：
 
 ```java
 使用了add方法
 增加一个用户
 ```
 
-+ 加深理解代理模式
+加深理解代理模式
 
-<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200603173925945.png" alt="image-20200603173925945" style="zoom:80%;" />
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200603173925945.png" alt="image-20200603173925945" style="zoom: 67%;" />
 
-### 1.5.2 动态代理
+### 2、动态代理-JDK
 
-+ 动态代理和静态代理角色一样。
-+ 动态代理的代理类是自动生成的，不是直接写好的。
+动态代理和静态代理角色一样。
+
+动态代理的代理类是自动生成的，不是直接写好的。
 
 分为两种情况：
 
 第一种是有接口的情况，我们使用的是基于接口的动态代理（JDK动态代理）。此时创建接口实现类代理对象，来增强类的方法。
+
+代理对象,不需要实现接口，但是目标对象要实现接口，否则不能用动态代理。代理对象的生成，是利用JDK的API，动态的在内存中构建代理对象。
+
+动态代理也叫做：JDK代理、接口代理。
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200626180346033.png" alt="image-20200626180310434" style="zoom:67%;" />
 
@@ -1097,13 +1114,17 @@ public class Client {
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200626180819210.png" alt="image-20200626180346033" style="zoom: 50%;" />
 
+```
+ClassLoader loader：指定当前目标对象的类加载器。
+Class<?>[] interfaces：目标对象实现的接口类型，使用泛化的方法确认类型。
+InnvocationHandler h：事情处理，执行目标对象的方法，会触发事情处理器方法，把当前执行的目标对象方法作为参数传入。
+```
+
 在实现的过程中，我们需要了解两个类：`Proxy`（代理）和`InvocationHandler`（调用处理程序）。
 
-**优点**
+优点是一个动态代理类代理的是一个接口，一般就是对应的一类业务；一个动态代理可以代理多个类，只要是实现了同一个接口即可。
 
-一个动态代理类代理的是一个接口，一般就是对应的一类业务；一个动态代理可以代理多个类，只要是实现了同一个接口即可。
-
-#### 1.5.2.1 创建简单项目
+#### 创建简单项目
 
 1. **创建接口**
 
@@ -1131,9 +1152,10 @@ public class Host implements Rent {
 //使用这个类，自动生产代理类
 public class ProxyInvocationHandler implements InvocationHandler {
 
-    //被代理的接口
+    //被代理对象-接口！！！！
     private Rent rent;
-
+		
+   //setter方法，传入代理
     public void setRent(Rent rent){
         this.rent = rent;
     }
@@ -1145,15 +1167,15 @@ public class ProxyInvocationHandler implements InvocationHandler {
 
     //接口的方法，用来处理代理实例，并返回结果
     public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-
+				//JDK代码开始
         //代理类附加操作
         seeHouse();
-
-        //代理的本质是使用反射机制来实现的
+        //代理的本质是使用反射机制来实现的。代理的对象rent。
         Object result = method.invoke(rent, args);
+        //JDK代理提交	
+      
         return result;
     }
-
 
     public void seeHouse(){
         System.out.println("中介----->看房子");
@@ -1174,13 +1196,15 @@ public class Client {
 
         //处理要调用的接口对象
         pih.setRent(host);
+       //获取代理对象
         Rent proxy = (Rent) pih.getProxy();
+       //通过代理对象，调用目标对象的方法
         proxy.rent();
     }
 }
 ```
 
-+ 控制台输出
+控制台输出：
 
 ```java
 中介----->看房子
@@ -1214,7 +1238,7 @@ public class ProxyInvocationHandler implements InvocationHandler {
 }
 ```
 
-#### 1.5.2.2 尚硅谷项目
+#### 尚硅谷项目
 
 **需要用到的类和方法**
 
@@ -1300,7 +1324,7 @@ class UserDaoProxy implements InvocationHandler{
 }
 ```
 
-+ 控制台输出
+控制台输出：
 
 ```ini
 方法执行之前。。。。。
@@ -1312,6 +1336,126 @@ result=3
 ```
 
 可以发现，确实当方法add()执行后，关于这个方法的附属方法执行了。
+
+### 3、动态代理-Cglib代理
+
+1、介绍
+
+静态代理和JDK代理模式都要求目标对象是实现一个接口,但是有时候目标对象只 是一个单独的对象,并没有实现任何的接口,这个时候可使用目标对象子类来实现 代理-这就是Cglib代理。
+
+Cglib代理也叫作子类代理，它是在内存中构建一个子类对象从而实现对目标对象功能扩展, 有些书也将Cglib代理归属到动态代理。
+
+在AOP编程中如何选择代理模式：
+
+目标对象需要实现接口，用JDK代理。
+
+目标对象不需要实现接口，用Cglib代理。
+
+ Cglib包的底层是通过使用字节码处理框架ASM来转换字节码并生成新的类。
+
+2、实现步骤
+
+（1）引入cglib的jar文件
+
+asm.jar，asm-commons.jar，asm-tree.jar，cglib-2.2.jar。
+
+（2）在内存中动态构建子类，注意代理的类不能为final，否则报错
+
+（3）) 目标对象的方法如果为final/static,那么就不会被拦截,即不会执行目标对象额外的 业务方法。
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923192327440.png" alt="image-20200923192327440" style="zoom:80%;" />
+
+3、代码
+
+（1）被代理的类
+
+```java
+public class TeacherDao {
+   public String teach() {
+      System.out.println(" 老师授课中  ， 我是cglib代理，不需要实现接口 ");
+      return "hello";
+   }
+}
+```
+
+（2）代理工厂-ProxyFactory
+
+```java
+import java.lang.reflect.Method;
+import net.sf.cglib.proxy.Enhancer;
+import net.sf.cglib.proxy.MethodInterceptor;
+import net.sf.cglib.proxy.MethodProxy;
+
+/**
+ * cglib是基于拦截器的方式进行代理，需要实现MethodInterceptor接口
+ */
+public class ProxyFactory implements MethodInterceptor {
+
+   //维护一个目标对象，被代理的对象
+   private Object target;
+   
+   //构造器，传入一个被代理的对象(TeacherDao对象)
+   public ProxyFactory(Object target) {
+      this.target = target;
+   }
+
+   //返回一个代理对象:  是 target 对象的代理对象
+   public Object getProxyInstance() {
+      //1. 创建一个工具类
+      Enhancer enhancer = new Enhancer();
+      //2. 设置父类
+      enhancer.setSuperclass(target.getClass());
+      //3. 设置回调函数
+      enhancer.setCallback(this);
+      //4. 创建子类对象，即代理对象
+      return enhancer.create();
+   }
+
+   //重写  intercept 方法，会调用目标对象的方法
+   @Override
+   public Object intercept(Object arg0, Method method, Object[] args, MethodProxy arg3) throws Throwable {
+      System.out.println("Cglib代理模式 ~~ 开始");
+      Object returnVal = method.invoke(target, args);
+      System.out.println("Cglib代理模式 ~~ 提交");
+      return returnVal;
+   }
+}
+```
+
+（3）客户端
+
+```java
+public class Client {
+   public static void main(String[] args) {
+      //创建目标对象
+      TeacherDao target = new TeacherDao();
+      //获取到代理对象，并且将目标对象传递给代理对象
+      TeacherDao proxyInstance = (TeacherDao) new ProxyFactory(target).getProxyInstance();
+
+      //执行代理对象的方法，触发intecept 方法，从而实现对目标对象的调用
+      String res = proxyInstance.teach();
+      System.out.println("res=" + res);
+   }
+}
+```
+
+### 4、代理模式的变体
+
+（1）防火墙代理 
+
+内网通过代理穿透防火墙，实现对公网的访问。 
+
+（2）缓存代理
+
+比如：当请求图片文件等资源时，先到缓存代理取，如果取到资源则ok,如果取不到资源， 再到公网或者数据库取，然后缓存。 
+
+（3）远程代理
+
+远程对象的本地代表，通过它可以把远程对象当本地对象来调用。远程代理通过网络和 真正的远程对象沟通信息。
+
+（4）同步代理
+
+主要使用在多线程编程中，完成多线程间同步工作
 
 ## 6、原型模式（Prototype）
 
@@ -1487,7 +1631,7 @@ v2--->Visio{name='xiaolun', createTime=Tue Jun 23 16:54:40 CST 2020}
 
 作用：在程序的结构上松耦合，从而扩大整体的类结构，用来解决更大的问题。
 
-该模式使得原本由于接口不兼容而不能在一起工作的那些类可以一起工作。、
+该模式使得原本由于接口不兼容而不能在一起工作的那些类可以一起工作。
 
 **角色分析**
 
@@ -1605,8 +1749,6 @@ public class Computer {
 
 从UML图中可以看出，这里的抽象类和接口是聚合关系，也就是调用和被调用的关系。
 
-
-
 该模式是将抽象部分与它的实现部分分离，使它们都可以独立的变化。它是一种对象结构型模式，又称为接口模式。
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623154356515.png" alt="image-20200623154356515" style="zoom:67%;" />
@@ -1615,19 +1757,21 @@ public class Computer {
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623161516493.png" alt="image-20200623154425976" style="zoom:80%;" />
 
-**优点**
+2、优点
 
 桥接模式提高了系统的可扩展性，在两个变化维度中任意扩展一个维度，都不需要修改原来的系统。符合开闭原则，就像一座桥，将两个变化的维度连接起来了。
 
+桥接模式替代多层继承方案，可以减少子类的个数，降低系统的管理和维护成本。因此，对于那些不希望使用继承或因为多层次继承导致系统类的个数急剧增加的系统，桥接模式尤为适用。
+
 所以，一个类中存在两个独立变化的维度，且这两个维度都需要进行扩展，推荐使用桥接模式。
 
-**缺点**
+3、缺点
 
 该模式的引入会增加系统的理解和设计难度，由于聚合关联关系建立在抽象层，要开发者针对抽象进行设计和编程。
 
 同时，该模式要求开发人员需要能够正确识别出系统中两个独立变化的维度，因此，其使用范围具有一定的局限性。
 
-### 1、测试
+### 2、测试
 
 <img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200623154425976.png" alt="image-20200623161516493" style="zoom:80%;" />
 
@@ -1667,7 +1811,7 @@ public class Apple implements Brand {
 3、电脑类型
 
 ```java
-//抽线的电脑类
+//抽象的电脑类
 public abstract class Computer {
     //组合，品牌，搭建的桥梁（电脑类型中放置品牌）
     protected Brand brand;
@@ -1718,7 +1862,7 @@ class Laptop extends Computer{
 ```java
 public class Test {
     public static void main(String[] args) {
-        //苹果笔记本（组装，笔记本+品牌），将两个好不相干的东西给拼接起来了。
+        //苹果笔记本（组装，笔记本+品牌），将两个毫不相干的东西给拼接起来了。
         Computer computer = new Laptop(new Apple());
         computer.info();
         //联想台式机
