--- a/06Java基础阶段/02我的笔记/设计模式2-韩.md
+++ b/06Java基础阶段/02我的笔记/设计模式2-韩.md
@@ -358,6 +358,774 @@ public class Client {
 
 （2）对象适配器：以对象给到，在Adapter里，将src作为一个对象，持有。
 
+## 4、装饰着模式
+
+### 1、介绍
+
+（1）概述
+
+装饰者模式：动态的将新功能附加到对象上。在对象功能扩展方面，它比继承更 有弹性，装饰者模式也体现了开闭原则(ocp)
+
+（2）原理
+
+装饰者模式就像打包一个快递。
+
+主体：比如：陶瓷、衣服 (Component) // 被装饰者。
+
+包装：比如：报纸填充、塑料泡沫、纸板、木板(Decorator)。
+
+ConcreteComponent：具体的主体， 比如前面的各个单品咖啡。
+
+在如图的Component与ConcreteComponent之间，如果 ConcreteComponent类很多,还可以设计一个缓冲层，将共有的部分提取出来， 抽象层一个类。
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923103150942.png" alt="image-20200923103150942" style="zoom:80%;" />
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923103214175.png" alt="image-20200923103214175" style="zoom:80%;" />
+
+### 2、案例
+
+装饰者模式下的订单：2份巧克力+一份牛奶的LongBlack
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923103331028.png" alt="image-20200923103331028" style="zoom:80%;" />
+
+1、Drink类
+
+```java
+package com.atguigu.decorator;
+
+/**
+ * 装饰者模式
+ */
+public abstract class Drink {
+	public String des; // 描述
+	private float price = 0.0f; //价格
+
+	public String getDes() {
+		return des;
+	}
+
+	public void setDes(String des) {
+		this.des = des;
+	}
+
+	public float getPrice() {
+		return price;
+	}
+
+	public void setPrice(float price) {
+		this.price = price;
+	}
+
+	//核心方法-计算费用的抽象方法
+	//子类（这样才可以计算出价格）来实现
+	public abstract float cost();
+}
+```
+
+2、coffer类
+
+```java
+public class Coffee extends Drink {
+	//单品咖啡就是它的价格
+	@Override
+	public float cost() {
+		return super.getPrice();
+	}
+}
+```
+
+3、单品咖啡-LongBlack
+
+```java
+public class LongBlack extends Coffee {
+	public LongBlack() {
+		setDes(" longblack ");
+		setPrice(5.0f);
+	}
+}
+```
+
+4、装饰者
+
+```java
+//装饰者
+public class Decorator extends Drink {
+   //将接口继承和组合
+   private Drink obj;
+
+   public Decorator(Drink obj) { //组合
+      this.obj = obj;
+   }
+
+   @Override
+   public float cost() {
+      // getPrice 自己价格。将单品咖啡的架构也要统计进去
+      return super.getPrice() + obj.cost();
+   }
+
+   @Override
+   public String getDes() {
+      // obj.getDes() 输出被装饰者的信息
+      return super.des + " " + getPrice() + " && " + obj.getDes();
+   }
+}
+```
+
+5、具体装饰者
+
+```java
+//具体的Decorator， 这里就是调味品
+public class Chocolate extends Decorator {
+   public Chocolate(Drink obj) {
+      super(obj);
+      setDes(" 巧克力 ");
+      setPrice(3.0f); // 调味品 的价格
+   }
+}
+
+public class Milk extends Decorator {
+	public Milk(Drink obj) {
+		super(obj);
+		setDes(" 牛奶 ");
+		setPrice(2.0f); 
+	}
+}
+```
+
+6、客户端测试
+
+```java
+public class Client {
+   public static void main(String[] args) {
+      //装饰者模式下的订单：2份巧克力+一份牛奶的LongBlack
+      //1、点一份LongBlack
+      Drink order = new LongBlack();
+      System.out.println("费用1：" + order.cost());
+      System.out.println("描述：" + order.getDes());
+
+      //2、order中加入一份牛奶
+      order = new Milk(order);
+      //3、order中加入一份巧克力
+      order = new Chocolate(order);
+      //4、order中再加入一份巧克力
+      order = new Chocolate(order);
+
+      // 13 = 5+ 2 + 3 + 3
+      System.out.println("总费用：" + order.cost());
+      //巧克力  3.0 &&  巧克力  3.0 &&  牛奶  2.0 &&  longblack
+      System.out.println("描述：" + order.getDes());
+   }
+}
+```
+
+## 5、组合模式
+
+### 1、介绍
+
+1、概述
+
+组合模式（Composite Pattern），又叫部分整体模式，它创建了对象组的树形结 构，将对象组合成树状结构以表示“整体-部分”的层次关系。
+
+组合模式使得用户对单个对象和组合对象的访问具有一致性，即：组合能让客户以一致的方式处理个别对象以及组合对象
+
+2、原理图
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923111751152.png" alt="image-20200923111751152" style="zoom:67%;" />
+
+（1）Component :这是组合中对象声明接口，在适当情况下，实现所有类共有的接口默认行为,用于访问和管理Component 子部件, Component 可以是抽象类或者接口。
+
+（2）Leaf：在组合中表示叶子节点，该节点没有子节点。
+
+（3）composite：非叶子节点，用于存储子部件，在component中实现子部件的相关操作，比如增加，删除等。
+
+3、解决的问题
+
+当我们的要处理的对象可以生成一颗树形结构，而 我们要对树上的节点和叶子进行操作时，它能够提供一致的方式，而不用考虑 它是节点还是叶子。
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923112126900.png" alt="image-20200923112126900" style="zoom:80%;" />
+
+
+
+### 2、案例
+
+1、需求
+
+展示一个学校院系结构，在一个页面中展示出学校的院系组 成，一个学校有多个学院，一个学院有多个系。
+
+2、代码
+
+（1）组合接口类
+
+```java
+package com.atguigu.composite;
+
+/**
+ * 组合模式
+ * 组织
+ */
+public abstract class OrganizationComponent {
+   private String name; // 名字
+   private String des; // 说明
+
+   //添加
+   protected void add(OrganizationComponent organizationComponent) {
+      //默认实现
+      throw new UnsupportedOperationException();
+   }
+
+   protected void remove(OrganizationComponent organizationComponent) {
+      //默认实现
+      throw new UnsupportedOperationException();
+   }
+
+   //构造器
+   public OrganizationComponent(String name, String des) {
+      super();
+      this.name = name;
+      this.des = des;
+   }
+
+   public String getName() {
+      return name;
+   }
+
+   public void setName(String name) {
+      this.name = name;
+   }
+
+   public String getDes() {
+      return des;
+   }
+
+   public void setDes(String des) {
+      this.des = des;
+   }
+
+   //方法print, 做成抽象的, 子类都需要实现
+   protected abstract void print();
+}
+```
+
+（2）大学类
+
+```java
+package com.atguigu.composite;
+
+import java.util.ArrayList;
+import java.util.List;
+
+//University 就是 Composite , 可以管理College
+public class University extends OrganizationComponent {
+   List<OrganizationComponent> organizationComponents = new ArrayList<OrganizationComponent>();
+
+   // 构造器
+   public University(String name, String des) {
+      super(name, des);
+   }
+
+   // 重写add
+   @Override
+   protected void add(OrganizationComponent organizationComponent) {
+      organizationComponents.add(organizationComponent);
+   }
+
+   // 重写remove
+   @Override
+   protected void remove(OrganizationComponent organizationComponent) {
+      organizationComponents.remove(organizationComponent);
+   }
+
+   @Override
+   public String getName() {
+      return super.getName();
+   }
+
+   @Override
+   public String getDes() {
+      return super.getDes();
+   }
+   // print方法，就是输出University 包含的学院
+   @Override
+   protected void print() {
+      System.out.println("--------------" + getName() + "--------------");
+      //遍历 organizationComponents（list集合中存放的是college，会调用college的print()方法）
+      for (OrganizationComponent organizationComponent : organizationComponents) {
+         organizationComponent.print();
+      }
+   }
+}
+```
+
+（3）学院类
+
+```java
+package com.atguigu.composite;
+
+import java.util.ArrayList;
+import java.util.List;
+
+//学院-Composite
+public class College extends OrganizationComponent {
+   //List 中 存放的Department
+   List<OrganizationComponent> organizationComponents = new ArrayList<OrganizationComponent>();
+
+   // 构造器
+   public College(String name, String des) {
+      super(name, des);
+   }
+
+   // 重写add
+   @Override
+   protected void add(OrganizationComponent organizationComponent) {
+      //将来实际业务中，college的add和university的add不一定一样
+      organizationComponents.add(organizationComponent);
+   }
+
+   // 重写remove
+   @Override
+   protected void remove(OrganizationComponent organizationComponent) {
+      organizationComponents.remove(organizationComponent);
+   }
+
+   @Override
+   public String getName() {
+      return super.getName();
+   }
+
+   @Override
+   public String getDes() {
+      return super.getDes();
+   }
+
+   // print方法，就是输出University 包含的学院
+   @Override
+   protected void print() {
+      System.out.println("--------------" + getName() + "--------------");
+      //遍历 organizationComponents 存放的是department，会调用department的print()方法
+      for (OrganizationComponent organizationComponent : organizationComponents) {
+         organizationComponent.print();
+      }
+   }
+}
+```
+
+（4）专业系类
+
+```java
+package com.atguigu.composite;
+//系类-叶子节点leaf
+public class Department extends OrganizationComponent {
+
+   //没有集合
+   public Department(String name, String des) {
+      super(name, des);
+   }
+
+   //add , remove 就不用写了，因为他是叶子节点
+   @Override
+   public String getName() {
+      return super.getName();
+   }
+
+   @Override
+   public String getDes() {
+      return super.getDes();
+   }
+
+   @Override
+   protected void print() {
+      System.out.println(getName());
+   }
+}
+```
+
+（5）客户端
+
+```java
+package com.atguigu.composite;
+
+public class Client {
+
+   public static void main(String[] args) {
+
+      //从大到小创建对象 学校
+      OrganizationComponent university = new University("清华大学", " 中国顶级大学 ");
+
+      //创建学院
+      OrganizationComponent computerCollege = new College("计算机学院", " 计算机学院 ");
+      OrganizationComponent infoEngineercollege = new College("信息工程学院", " 信息工程学院 ");
+
+
+      //创建各个学院下面的系(专业)
+      computerCollege.add(new Department("软件工程", " 软件工程不错 "));
+      computerCollege.add(new Department("网络工程", " 网络工程不错 "));
+
+      infoEngineercollege.add(new Department("通信工程", " 通信工程不好学 "));
+      infoEngineercollege.add(new Department("信息工程", " 信息工程好学 "));
+
+      //将学院加入到 学校
+      university.add(computerCollege);
+      university.add(infoEngineercollege);
+
+      //打印输出
+      university.print();
+//    computerCollege.print();
+   }
+}
+```
+
+控制台输出：
+
+```
+--------------清华大学--------------
+--------------计算机学院--------------
+软件工程
+网络工程
+--------------信息工程学院--------------
+通信工程
+信息工程
+```
+
+### 3、细节
+
+1、方便创建出复杂的层次结构。客户端不用理会组合里面的组成细节，容易添加节点 或者叶子从而创建出复杂的树形结构。
+
+2、需要遍历组织机构，或者处理的对象具有树形结构时, 非常适合使用组合模式。
+
+3、要求较高的抽象性，如果节点和叶子有很多差异性的话，比如很多方法和属性 都不一样，不适合使用组合模式。
+
+## 6、外观模式（Facade）
+
+### 1、介绍
+
+1、概述
+
+外观模式（Facade），也叫“过程模式：外观模式为子系统中的一组接口提供 一个一致的界面，此模式定义了一个高层接口，这个接口使得这一子系统更加容易使用。
+
+外观模式通过定义一个一致的接口，用以屏蔽内部子系统的细节，使得调用端只需跟这个接口发生调用，而无需关心这个子系统的内部细节。
+
+2、原理类图
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923114839877.png" alt="image-20200923114839877" style="zoom:80%;" />
+
+
+
+（1）外观类(Facade): 为调用端提供统一的调用接口, 外观类知道哪些子系统负责处理请求,从而将调用端的请求代理给适当 子系统对象。
+
+（2）调用者(Client): 外观接口的调用者。
+
+（3）子系统的集合：指模块或者子系统，处理Facade 对象指派的任务，他是功能的实际提供者。
+
+3、外观模式解决影院管理
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923115009059.png" alt="image-20200923115009059" style="zoom:80%;" />
+
+外观模式可以理解为转换一群接口，客户只 要调用一个接口，而不用调用多个接口才能 达到目的。比如：手机的重启功能 （把关机和启动合为一个操作）。
+
+### 2、案例
+
+1、需求
+
+
+
+```
+组建一个家庭影院：
+DVD播放器、投影仪、自动屏幕、环绕立体声、爆米花机,要求完成使用家庭影院的
+功能，其过程为：
+• 直接用遥控器：统筹各设备开关
+• 开爆米花机
+• 放下屏幕
+• 开投影仪
+• 开音响
+• 开DVD，选dvd
+• 去拿爆米花
+• 调暗灯光
+• 播放
+• 观影结束后，关闭各种设备
+```
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923115052224.png" alt="image-20200923115052224" style="zoom:80%;" />
+
+2、代码
+
+（1）DVDPlayer
+
+```java
+package com.atguigu.facade;
+
+public class DVDPlayer {
+
+   //使用单例模式, 使用饿汉式
+   private static DVDPlayer instance = new DVDPlayer();
+
+   public static DVDPlayer getInstanc() {
+      return instance;
+   }
+
+   public void on() {
+      System.out.println(" dvd on ");
+   }
+
+   public void off() {
+      System.out.println(" dvd off ");
+   }
+
+   public void play() {
+      System.out.println(" dvd is playing ");
+   }
+
+   public void pause() {
+      System.out.println(" dvd pause ..");
+   }
+}
+```
+
+（2）爆米花Popcorn
+
+```java
+package com.atguigu.facade;
+
+//爆米花
+public class Popcorn {
+   private static Popcorn instance = new Popcorn();
+
+   public static Popcorn getInstance() {
+      return instance;
+   }
+
+   public void on() {
+      System.out.println(" popcorn on ");
+   }
+
+   public void off() {
+      System.out.println(" popcorn ff ");
+   }
+
+   public void pop() {
+      System.out.println(" popcorn is poping  ");
+   }
+}
+```
+
+（3）外观类
+
+```java
+package com.atguigu.facade;
+
+//中间做一个外观类
+public class HomeTheaterFacade {
+   //定义各个子系统对象
+   private TheaterLight theaterLight;
+   private Popcorn popcorn;
+   private Stereo stereo;
+   private Projector projector;
+   private Screen screen;
+   private DVDPlayer dVDPlayer;
+
+   //构造器
+   public HomeTheaterFacade() {
+      super(); //获取实例
+      this.theaterLight = TheaterLight.getInstance();
+      this.popcorn = Popcorn.getInstance();
+      this.stereo = Stereo.getInstance();
+      this.projector = Projector.getInstance();
+      this.screen = Screen.getInstance();
+      this.dVDPlayer = DVDPlayer.getInstanc();
+   }
+
+   //操作分成 4 步
+   public void ready() {
+      popcorn.on();
+      popcorn.pop();
+      screen.down();
+      projector.on();
+      stereo.on();
+      dVDPlayer.on();
+      theaterLight.dim();
+   }
+
+   public void play() {
+      dVDPlayer.play();
+   }
+
+   public void pause() {
+      dVDPlayer.pause();
+   }
+
+   public void end() {
+      popcorn.off();
+      theaterLight.bright();
+      screen.up();
+      projector.off();
+      stereo.off();
+      dVDPlayer.off();
+   }
+}
+```
+
+（4）调用者client
+
+```java
+public class Client {
+   public static void main(String[] args) {
+      HomeTheaterFacade homeTheaterFacade = new HomeTheaterFacade();
+      //拿到外观类，有选择地调用方法
+      homeTheaterFacade.ready();
+      homeTheaterFacade.play();
+      homeTheaterFacade.end();
+   }
+}
+```
+
+3、细节
+
+（1）外观模式对外屏蔽了子系统的细节，因此外观模式降低了客户端对子系统使用的复杂性。
+
+（2）外观模式对客户端与子系统的耦合关系，让子系统内部的模块更易维护和扩展。
+
+（3）通过合理的使用外观模式，可以帮我们更好的划分访问的层次。
+
+（4）当系统需要进行分层设计时，可以考虑使用Facade模式。
+
+（5）在维护一个遗留的大型系统时，可能这个系统已经变得非常难以维护和扩展，此时 可以考虑为新系统开发一个Facade类，来提供遗留系统的比较清晰简单的接口， 让新系统与Facade类交互，提高复用性。
+
+（6）不能过多的或者不合理的使用外观模式，使用外观模式好，还是直接调用模块好。 要以让系统有层次，利于维护为目的。
+
+## 7、享元模式
+
+### 1、介绍
+
+1、概述
+
+享元模式（Flyweight Pattern） 也叫 蝇量模式: 运 用共享技术有效地支持大量细粒度的对象。
+
+常用于系统底层开发，解决系统的性能问题。像数据库连接池，里面都是创建好的连接对象，在这些连接对象中有我们需要的则直接拿来用，避免重新创建，如果没有我们需要的，则创建一个。
+
+享元模式能够解决重复对象的内存浪费的问题， 当系统中有大量相似对象，需要缓冲池时。不需 总是创建新对象，可以从缓冲池里拿。这样可以 降低系统内存，同时提高效率。
+
+2、原理类图
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923142155640.png" alt="image-20200923142155640" style="zoom:80%;" />
+
+
+
+ （1）FlyWeight：抽象的享元角色, 他是产品的抽象类, 同时定义出对象的外部状态和内部状态的接口或实现。
+
+（2）ConcreteFlyWeight：具体的享元角色，是具体的产品类，实现抽象角色定义相关业务。
+
+（3）UnsharedConcreteFlyweight：不可共享的角色。一般不会出现在共享工厂中。
+
+（4）FlyweightFactory：共享工厂类，用于创建一个池容量（集合），同时提供从池中获取对象的方法。
+
+3、内/外部状态
+
+享元模式提出了两个要求：细粒度和共享对象。这里就涉及到内部状态和外部状态 了，即将对象的信息分为两个部分：内部状态和外部状态。
+
+（1）内部状态指对象共享出来的信息，存储在享元对象内部且不会随环境的改变而改变。
+
+（2）外部状态指对象得以依赖的一个标记，是随环境改变而改变的、不可共享的状态。
+
+比如围棋，它们都有大量的棋子对象跳棋颜色多一 点，所以棋子颜色就是棋子的内部状态；而各个棋子之间的差别就是位置的不同，当我们落子后， 落子颜色是定的，但位置是变化的，所以棋子坐标就是棋子的外部状态。
+
+### 2、案例
+
+1、需求
+
+小型的外包项目，给客户A做一个产品展示网站，客户A的朋友也希望做这样的产品展示网站，但是要求都有些不同： 
+
+（1）有客户要求以新闻的形式发布 
+
+（2）有客户人要求以博客的形式发布
+
+2、代码
+
+<img src="https://gitee.com/whlgdxlkl/my-picture-bed/raw/master/uploadPicture/image-20200923143215558.png" alt="image-20200923143215558" style="zoom:80%;" />
+
+（1）WebSite抽象类
+
+```java
+public abstract class WebSite {
+   public abstract void use(User user);//抽象方法
+}
+```
+
+（2）具体网站
+
+```java
+public class ConcreteWebSite extends WebSite {
+   //共享的部分，内部状态
+   private String type = ""; //网站发布的形式(类型)
+
+   //构造器-将具体的网站类型传进来
+   public ConcreteWebSite(String type) {
+      this.type = type;
+   }
+
+   @Override
+   public void use(User user) {
+      System.out.println("网站的发布形式为:" + type + " 在使用中 .. 使用者是" + user.getName());
+   }
+}
+```
+
+（3）用户-外部状态
+
+```java
+public class User {
+   private String name;
+
+   public User(String name) {
+      super();
+      this.name = name;
+   }
+
+   public String getName() {
+      return name;
+   }
+
+   public void setName(String name) {
+      this.name = name;
+   }
+}
+```
+
+（4）客户端
+
+```java
+public class Client {
+   public static void main(String[] args) {
+      // 创建一个工厂类
+      WebSiteFactory factory = new WebSiteFactory();
+
+      // 客户要一个以新闻形式发布的网站
+      WebSite webSite1 = factory.getWebSiteCategory("新闻");
+      webSite1.use(new User("tom"));
+
+      // 客户要一个以博客形式发布的网站
+      WebSite webSite2 = factory.getWebSiteCategory("博客");
+      webSite2.use(new User("jack"));
+      
+      System.out.println("网站的分类共=" + factory.getWebSiteCount());
+   }
+}
+```
+
+### 3、细节
+
+（1）在享元模式这样理解，“享”就表示共享，“元”表示对象。
+
+（2）系统中有大量对象，这些对象消耗大量内存，并且对象的状态大部分可以外部化时， 我们就可以考虑选用享元模式。
+
+（3）用唯一标识码判断，如果在内存中有，则返回这个唯一标识码所标识的对象，用 HashMap/HashTable存储。
+
+（4）享元模式大大减少了对象的创建，降低了程序内存的占用，提高效率。
+
+（5）享元模式提高了系统的复杂度。需要分离出内部状态和外部状态，而外部状态具有 固化特性，不应该随着内部状态的改变而改变，这是我们使用享元模式需要注意的地方。
+
+（6）使用享元模式时，注意划分内部状态和外部状态，并且需要有一个工厂类加以控制。
+
+（7）享元模式经典的应用场景是需要缓冲池的场景，比如 String常量池、数据库连接池。
+
 
 
 
